# pixi_panda_ros2_ITR

./: .gitmodules  README.md  pixi.toml
scripts/: connect.py  connect_no_cam.py
scripts/testfiles/: test_gripper_teleop.py
scripts/utils/: franka_bridge_node.py  franka_client.py  franka_lock_unlock.py  panda_arm.py
src/franka_bringup/config/: controllers.yaml
src/franka_bringup/launch/: franka.launch.py
src/franka_bringup/scripts/: crisp_py_gripper_adapter.py
src/franka_control2/: package.xml
src/franka_gripper/: package.xml
src/franka_gripper/config/: franka_gripper_node.yaml
src/franka_gripper/launch/: gripper.launch.py
src/franka_hardware/: CMakeLists.txt  package.xml
src/franka_hardware/include/franka_hardware/real/: franka_multi_hardware_interface.hpp
src/franka_hardware/src/real/: franka_multi_hardware_interface.cpp
src/franka_robot_state_broadcaster/src/: franka_robot_model_broadcaster.cpp  franka_robot_state_broadcaster.cpp
testfile/: connect.py  connect.sh  crisp_figure_eight.py  crisp_teleop.py  franka_bridge_node.py  test_buttonpress.py  test_dualarm_eight.py  test_gravity_compensation.py  test_gripper.py  test_gripper_teleoperation.py  test_joint_control.py  test_jointstate-communication.py  test_jointstate_communication.py  test_teleop.py
testfile/control/: gravity_compensation.yaml  joint_control.yaml
